# data-utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
data_utils/: script.py  settings.py  sftp_s3_interface.py
data_utils/connectors/: email_connector.py  s3_connector.py  sftp_connector.py  slack_connector.py  snowflake_connector.py
data_utils/file_interfaces/: pgp.py  sftp_s3_interface.py
data_utils/file_interfaces/fixed_width/: data_type_parser.py  type_caster.py
data_utils/file_utils/: pgp.py  sftp_s3_interface.py
data_utils/file_utils/fixed_width/: file_spec.py  type_caster.py
tests/: test_type_caster.py
