[tool.poetry]
name = "data-utils"
version = "0.1.14"
description = ""
authors = ["Ryan Whitten <ryan.whitten@bestegg.com>"]

[tool.poetry.dependencies]
python = "^3.7"
snowflake-connector-python = "^2.3.3"
python-dotenv = "^0.14.0"
pysftp = "^0.2.9"
sendgrid = "^6.4.7"
slackclient = "^2.9.3"
PyMySQL = "^0.10.1"
pendulum = "^2.1.2"
SQLAlchemy = "1.3.19"
python-gnupg = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
